tests/ui/opts/crate_arg_without_path.stderr
error: unexpected end of input, expected string literal
 --> tests/ui/opts/crate_arg_without_path.rs:4:18
  |
4 | #[funcmap(crate =)]
  |                  ^
